--- a/DEV - Workflow Prompts/speckit_implementation.yaml
+++ b/DEV - Workflow Prompts/speckit_implementation.yaml
@@ -34,7 +34,7 @@ rules:
 user_inputs:
   spec_folder: "[SPEC_FOLDER]" # e.g., specs/001-feature-name
   context: "[CONTEXT]" # Additional context for implementation
-  request: "Conduct a comprehensive review of the spec folder and carry out its implementation." # Specific implementation request or focus areas
+  request: "Conduct a comprehensive review of the spec folder and carry out its implementation fully autonomously." # Specific implementation request or focus areas
 
 # ───────────────────────────────────────────────────────────────
 # WORKFLOW
