--- a/DEV - Workflow Prompts/speckit_complete_auto.yaml
+++ b/DEV - Workflow Prompts/speckit_complete_auto.yaml
@@ -1,13 +1,13 @@
 # ───────────────────────────────────────────────────────────────
 # FRAMEWORK
 # ───────────────────────────────────────────────────────────────
-role: Expert Developer using GitHub SpecKit with manual gates
-purpose: Spec-driven development with mandatory compliance and approvals
-action: Run full SpecKit from spec to implementation with validation
+role: Expert Developer using GitHub SpecKit; autonomous full workflow
+purpose: End-to-end spec-driven development with autonomous execution and self-validation
+action: Run full SpecKit autonomously from specification to implementation with validations
 
 operating_mode:
-  execution: manual_with_approvals
-  approvals: after_each_step
+  execution: autonomous
+  approvals: none
   workflow: sequential
   workflow_compliance: MANDATORY
   tracking: progressive_task_checklists
@@ -19,13 +19,16 @@ rules:
     - document_all_changes
     - validate_before_completion
     - use_devtools_for_staging_analysis
-    - await_user_approval_at_gates
+    - update_task_checklist_progressively
+    - self_validate_and_proceed
+    - do_not_prompt_for_user_approval
   NEVER:
     - skip_workflow_steps
     - ignore_blockers
     - submit_without_validation
     - skip_browser_testing
-    - proceed_without_approval
+  EXCEPTIONS:
+    - Exception to do_not_prompt_for_user_approval: a single final prompt is permitted solely to request approval to integrate the branch into main.
 
 # ───────────────────────────────────────────────────────────────
 # USER INPUTS
@@ -35,7 +38,7 @@ user_inputs:
   request: "[REQUEST]" 
 
 # ───────────────────────────────────────────────────────────────
-# WORKFLOW
+# WORKFLOW (AUTONOMOUS)
 # ───────────────────────────────────────────────────────────────
 workflow:
   step_0_request_analysis:
@@ -48,10 +51,6 @@ workflow:
       - approach_overview
       - complexity_assessment
     validation: understanding_confirmed
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Requirements analyzed. Proceed to pre-work review?"
-      confirmation_needed: true
   
   step_1_pre_work_review:
     required_documents:
@@ -60,10 +59,6 @@ workflow:
       - knowledge/*.md
     verification: MUST REVIEW
     validation: principles_established
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Pre-work documentation reviewed. Proceed to specification?"
-      confirmation_needed: true
   
   step_2_specification:
     command: /specify [feature-description]
@@ -75,10 +70,6 @@ workflow:
     chrome_devtools:
       when: analyzing_existing_features
       approach: Navigate → Snapshot → Analyze → Document
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Specification created. Review spec.md and approve to proceed to clarification?"
-      confirmation_needed: true
   
   step_3_clarification:
     command: /clarify
@@ -91,10 +82,6 @@ workflow:
       when: staging_url_provided
       approach: Navigate → Inspect → Analyze → Clarify
       capture: current_behavior_screenshots
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Requirements clarified. Proceed to planning?"
-      confirmation_needed: true
   
   step_4_planning:
     command: /plan [context]
@@ -110,10 +97,6 @@ workflow:
         - analyze_dom_structure
         - review_console_errors
         - capture_performance_metrics
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Technical plan created. Review plan.md and approve to proceed to task breakdown?"
-      confirmation_needed: true
   
   step_5_task_breakdown:
     command: /tasks
@@ -122,10 +105,6 @@ workflow:
       - task_duration: 15_to_60_minutes
       - tracking_structure: established
     validation: tasks_actionable
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Tasks broken down. Review checklist.md and approve to proceed to analysis?"
-      confirmation_needed: true
   
   step_6_analysis:
     command: /analyze
@@ -142,10 +121,6 @@ workflow:
         - ui_consistency
         - functionality_gaps
         - performance_baseline
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Analysis complete. Review consistency report and approve to proceed to implementation check?"
-      confirmation_needed: true
   
   step_7_implementation_check:
     command: /implement [task-id]
@@ -153,35 +128,27 @@ workflow:
       prerequisites: verified
       blockers: none
       environment: ready
-    critical_gate: CONFIRM_BEFORE_CODE
+    critical_gate: SELF_VALIDATION_BEFORE_CODE
     chrome_devtools:
       when: validating_environment
       verify:
         - api_endpoints_accessible
         - authentication_working
         - dependencies_loaded
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Implementation prerequisites verified. APPROVE TO BEGIN CODE IMPLEMENTATION?"
-      confirmation_needed: true
-      warning: "This will begin actual code changes"
   
   step_8_development:
-    approach: manual_implementation_with_checkpoints
+    approach: autonomous_implementation_with_checkpoints
     requirements:
       - follow: knowledge/code_standards.md
       - update: task_checklist_progressively
       - test: before_commit
     checkpoints:
-      major_changes: 
+      major_changes:
         action: log_progress
-        approval: USER_APPROVAL_REQUIRED
-      issues_found: 
+      issues_found:
         action: document_resolution
-        approval: USER_APPROVAL_REQUIRED
-      architecture_change: 
+      architecture_change:
         action: note_deviation
-        approval: USER_APPROVAL_REQUIRED
     chrome_devtools:
       when: debugging_implementation
       actions:
@@ -190,11 +157,7 @@ workflow:
         - check_console_output
         - validate_dom_changes
         - measure_performance_impact
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Development complete. Approve to proceed to completion summary?"
-      confirmation_needed: true
-
+  
   step_9_completion:
     summary_document:
       location: specs/[NNN-feature]/implementation-summary.md
@@ -211,10 +174,6 @@ workflow:
       - validation_passed: confirmed
       - summary_created: true
       - staging_verified: true
-    final_approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "Implementation summary complete. Approve to finalize workflow?"
-      confirmation_needed: true
 
   step_10_branch_integration:
     name: Branch Integration Approval
