--- a/DEV - Workflow Prompts/speckit_code_review_and_debug.yaml
+++ b/DEV - Workflow Prompts/speckit_code_review_and_debug.yaml
@@ -1,9 +1,9 @@
 # ───────────────────────────────────────────────────────────────
 # FRAMEWORK
 # ───────────────────────────────────────────────────────────────
-role: Expert Developer utilizing the GitHub SpecKit workflow for systematic debug-test-review
-purpose: SpecKit-driven debugging with evidence-based root cause analysis and comprehensive validation
-action: Execute complete SpecKit workflow adapted for debug-test-review with Chrome DevTools MCP integration
+role: Expert Developer using GitHub SpecKit for debug-test-review
+purpose: Evidence-based debugging with comprehensive validation
+action: Run SpecKit adapted for debug-test-review with Chrome DevTools MCP
 
 operating_mode:
   execution: autonomous
@@ -65,15 +65,17 @@ rules:
     - submit_without_validation
     - skip_browser_testing
     - assume_without_testing
+  EXCEPTIONS:
+    - Exception to do_not_prompt_for_user_approval: a single final prompt is permitted solely to request approval to integrate the branch into main.
 
 # ───────────────────────────────────────────────────────────────
 # USER INPUTS
 # ───────────────────────────────────────────────────────────────
 user_inputs:
-  context: "[CONTEXT]"      # Background information about the bug or review
-  request: "[REQUEST]"      # Specific debug or review request
-  environment: "[LINK]"     # Staging URL or environment link
-  scope: "[FILES]"          # Specific files or components to investigate
+  context: "[CONTEXT]"     
+  request: "[REQUEST]"     
+  environment: "[LINK]"     
+  scope: "[FILES]"         
 
 # ───────────────────────────────────────────────────────────────
 # WORKFLOW
@@ -81,11 +83,11 @@ user_inputs:
 workflow:
   step_0_request_analysis:
     input_source: USER_INPUTS_SECTION_ABOVE
-    context: "Use [CONTEXT] value from user_inputs"
-    request: "Use [REQUEST] value from user_inputs"
-    environment: "Use [LINK] value from user_inputs"
-    scope: "Use [FILES] value from user_inputs"
-    action: Analyze debug requirements from filled user inputs and establish understanding
+    context: "Use [CONTEXT] from user_inputs"
+    request: "Use [REQUEST] from user_inputs"
+    environment: "Use [LINK] from user_inputs"
+    scope: "Use [FILES] from user_inputs"
+    action: Analyze inputs and confirm understanding
 
     debug_analysis:
       surface_understanding:
@@ -144,7 +146,7 @@ workflow:
         - Previous bug fixes in area
         - Pattern evolution
 
-    verification: MUST REVIEW BEFORE PROCEEDING
+    verification: MUST REVIEW
     validation: principles_established
 
   step_2_specification:
@@ -458,6 +460,30 @@ workflow:
       - code_reviewed: critically
       - documentation_complete: true
       - staging_verified: true
+
+  step_10_branch_integration:
+    name: Branch Integration Approval
+    approval_gate:
+      type: USER_APPROVAL_REQUIRED
+      prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
+      confirmation_needed: true
+    integration_policy:
+      merge_strategy: rebase_then_fast_forward
+      safety_checks:
+        - clean working tree
+        - validations/tests/pass checks are green (as applicable for the workflow)
+        - no unresolved blockers
+      conflict_policy:
+        on_rebase_conflict: pause and ask for guidance
+        fallback_to_pr: offer to open a PR if user prefers manual resolution
+      steps:
+        - fetch origin
+        - update main (pull --ff-only)
+        - rebase feature branch onto main
+        - fast-forward merge into main
+        - push origin main
+        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
+      tagging: optional; only on user request
 
 # ───────────────────────────────────────────────────────────────
 # CHROME DEVTOOLS MCP MANDATE
