--- a/DEV - Workflow Prompts/speckit_performance_improvement.yaml
+++ b/DEV - Workflow Prompts/speckit_performance_improvement.yaml
@@ -1,9 +1,9 @@
 # ───────────────────────────────────────────────────────────────
 # FRAMEWORK
 # ───────────────────────────────────────────────────────────────
-role: Expert Developer utilizing the GitHub SpecKit workflow for systematic performance optimization
-purpose: SpecKit-driven performance improvement with mandatory preservation of functionality and user experience
-action: Execute complete SpecKit workflow adapted for performance optimization with validation gates
+role: Expert Developer using GitHub SpecKit for performance optimization
+purpose: Performance improvement with mandatory feature/UX preservation
+action: Run SpecKit adapted for performance optimization with validation gates
 
 operating_mode:
   execution: autonomous
@@ -66,13 +66,15 @@ rules:
     - deploy_without_validation
     - ignore_browser_compatibility
     - skip_rollback_preparation
+  EXCEPTIONS:
+    - Exception to do_not_prompt_for_user_approval: a single final prompt is permitted solely to request approval to integrate the branch into main.
 
 # ───────────────────────────────────────────────────────────────
 # USER INPUTS
 # ───────────────────────────────────────────────────────────────
 user_inputs:
-  context: "[CONTEXT]"  # Background information about performance issues
-  request: "[REQUEST]"  # Specific performance improvement request
+  context: "[CONTEXT]"  
+  request: "[REQUEST]" 
 
 # ───────────────────────────────────────────────────────────────
 # WORKFLOW
@@ -80,9 +82,9 @@ user_inputs:
 workflow:
   step_0_request_analysis:
     input_source: USER_INPUTS_SECTION_ABOVE
-    context: "Use [CONTEXT] value from user_inputs"
-    request: "Use [REQUEST] value from user_inputs"
-    action: Analyze performance requirements from filled user inputs and establish baseline
+    context: "Use [CONTEXT] from user_inputs"
+    request: "Use [REQUEST] from user_inputs"
+    action: Analyze inputs and establish baseline
 
     performance_assessment:
       current_state:
@@ -145,7 +147,7 @@ workflow:
         - Map business logic flows
         - Capture interaction patterns
 
-    verification: MUST REVIEW BEFORE PROCEEDING
+    verification: MUST REVIEW
     validation: principles_established
 
   step_2_specification:
@@ -493,6 +495,30 @@ workflow:
       - performance_improved: measured
       - documentation_complete: true
       - staging_verified: true
+
+  step_10_branch_integration:
+    name: Branch Integration Approval
+    approval_gate:
+      type: USER_APPROVAL_REQUIRED
+      prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
+      confirmation_needed: true
+    integration_policy:
+      merge_strategy: rebase_then_fast_forward
+      safety_checks:
+        - clean working tree
+        - validations/tests/pass checks are green (as applicable for the workflow)
+        - no unresolved blockers
+      conflict_policy:
+        on_rebase_conflict: pause and ask for guidance
+        fallback_to_pr: offer to open a PR if user prefers manual resolution
+      steps:
+        - fetch origin
+        - update main (pull --ff-only)
+        - rebase feature branch onto main
+        - fast-forward merge into main
+        - push origin main
+        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
+      tagging: optional; only on user request
 
 # ───────────────────────────────────────────────────────────────
 # CHROME DEVTOOLS MCP MANDATE
